mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_undefined_type_optional_new.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: Undefined variable 'optional'
--> test_scripts/error_cases/semantic_undefined_type_optional_new.mux:2:18
   |
 2 | auto empty_opt = optional.new()
   |                  ^^^^^^^^
   |
= help: Optional has no '.new()' constructor. Use 'none' for an empty value or 'some(value)' for a value. For example: optional<int> my_opt = none
